[package]
name = "emu8"
version = "0.1.0"
authors = ["rhys <rhysormond@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0"
sdl2 = "0"

[workspace]
# The executable that uses this library is a member of this workspace so that it
# can have dependencies emu8 shouldn't have
members = ["chip8"]
default-members = ["chip8"]